pvq-extension/procedural/tests/ui/extension_decl/not_on_mod.stderr
error: expected `mod`
 --> tests/ui/extension_decl/not_on_mod.rs:5:1
  |
5 | struct InvalidUsage {
  | ^^^^^^
